[gd_scene load_steps=6 format=3 uid="uid://bd66ccn8jutf4"]

[ext_resource type="Script" uid="uid://rnvrcuq05h03" path="res://Scripts/key.gd" id="1_lc1k7"]
[ext_resource type="Texture2D" uid="uid://tjdif8xrxykt" path="res://Sprites/clef.png" id="2_58hov"]
[ext_resource type="AudioStream" uid="uid://cxh16eae7f8ul" path="res://Sounds/key.wav" id="3_qvjb5"]
[ext_resource type="AudioStream" uid="uid://e32a0u8bhxlj" path="res://Sounds/stone_door.wav" id="4_20akx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qxfql"]
radius = 4.0

[node name="Key" type="Node2D"]
script = ExtResource("1_lc1k7")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_58hov")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_qxfql")

[node name="KeyPickUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qvjb5")

[node name="DoorOpeningSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_20akx")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
